# advent-of-code-2022

./: .envrc  .gitignore  Cargo.toml  default.nix  flake.nix  treefmt.toml
day-01/src/: main.rs
day-02/: Cargo.toml  README.md
day-02/src/: lib.rs
